# Starship-API-Python

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/models/: __init__.py  schemas.py
app/services/: swapi_service.py
tests/: test_pilots.py  test_routes.py  test_starships.py
