[tool.poetry]
name = "starship-api-python"
version = "0.2.0"
description = "An API to manage starships and pilots for the Galactic Empire."
authors = ["Edward <eafanadoracevedo@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
httpx = "^0.25.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
respx = "^0.22.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"



